Chapter 6 language edits

--- a/book.bib
+++ b/book.bib
@@ -1,3 +1,15 @@
+
+@article{Gupta2022,
+  title={Dissipation of reactive inhibition is sufficient to explain post-rest improvements in motor sequence learning},
+  author={Gupta, Mohan W and Rickard, Timothy C},
+  journal={npj Science of Learning},
+  volume={7},
+  number={1},
+  pages={25},
+  year={2022},
+  publisher={Nature Publishing Group UK London}
+}
+
 @article{Berens2020,
    abstract = {Abstract: Forgetting involves the loss of information over time; however, we know little about what form this information loss takes. Do memories become less precise over time, or do they instead become less accessible? Here we assessed memory for word–location associations across four days, testing whether forgetting involves losses in precision versus accessibility and whether such losses are modulated by learning a generalizable pattern. We show that forgetting involves losses in memory accessibility with no changes in memory precision. When participants learned a set of related word–location associations that conformed to a general pattern, we saw a strong trade-off; accessibility was enhanced, whereas precision was reduced. However, this trade-off did not appear to be modulated by time or confer a long-term increase in the total amount of information maintained in memory. Our results place theoretical constraints on how models of forgetting and generalization account for time-dependent memory processes. Protocol registration: The stage 1 protocol for this Registered Report was accepted in principle on 4 June 2019. The protocol, as accepted by the journal, can be found at https://doi.org/10.6084/m9.figshare.c.4368464.v1.},
    author = {Sam C. Berens and Blake A. Richards and Aidan J. Horner},
