Ch 5 sampling edits
Edited text for clarity, updated glossary and citations, divided probability and nonprobability sampling methods into two sections, added box on online data collection, deleted section and box on sample size, moved anecdotal evidence section, added section about WEIRD problem in psychology, added box about commonly confused terms

--- a/book.bib
+++ b/book.bib
@@ -1,4 +1,3 @@
-
 @article{Gupta2022,
   title={Dissipation of reactive inhibition is sufficient to explain post-rest improvements in motor sequence learning},
   author={Gupta, Mohan W and Rickard, Timothy C},
@@ -1387,4 +1386,87 @@ pages = {1257-1277},
 year = {2022},
 doi = {10.1177/09567976221075303},
     note ={PMID: 35797281}
+}
+
+@inproceedings{hara2018data,
+  title={A data-driven analysis of workers' earnings on Amazon Mechanical Turk},
+  author={Hara, Kotaro and Adams, Abigail and Milland, Kristy and Savage, Saiph and Callison-Burch, Chris and Bigham, Jeffrey P},
+  booktitle={Proceedings of the 2018 CHI conference on human factors in computing systems},
+  pages={1--14},
+  year={2018}
+}
+
+@article{hendra2019rethinking,
+  title={Rethinking response rates: new evidence of little relationship between survey response rates and nonresponse bias},
+  author={Hendra, Richard and Hill, Aaron},
+  journal={Evaluation review},
+  volume={43},
+  number={5},
+  pages={307--330},
+  year={2019},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
+@article{henrich2010weirdest,
+  title={The weirdest people in the world?},
+  author={Henrich, Joseph and Heine, Steven J and Norenzayan, Ara},
+  journal={Behavioral and brain sciences},
+  volume={33},
+  number={2-3},
+  pages={61--83},
+  year={2010},
+  publisher={Cambridge University Press}
+}
+
+@article{litman2017turkprime,
+  title={TurkPrime. com: A versatile crowdsourcing data acquisition platform for the behavioral sciences},
+  author={Litman, Leib and Robinson, Jonathan and Abberbock, Tzvi},
+  journal={Behavior research methods},
+  volume={49},
+  number={2},
+  pages={433--442},
+  year={2017},
+  publisher={Springer}
+}
+
+@article{sears1986college,
+  title={College sophomores in the laboratory: Influences of a narrow data base on social psychology's view of human nature.},
+  author={Sears, David O},
+  journal={Journal of personality and social psychology},
+  volume={51},
+  number={3},
+  pages={515},
+  year={1986},
+  publisher={American Psychological Association}
+}
+
+@article{sieber1989census,
+  title={A census of subject pool characteristics and policies.},
+  author={Sieber, Joan E and Saks, Michael J},
+  journal={American Psychologist},
+  volume={44},
+  number={7},
+  pages={1053},
+  year={1989},
+  publisher={American Psychological Association}
+}
+
+@article{syed2022cultural,
+  title={Cultural psychology, diversity, and representation in open science},
+  author={Syed, Moin and Kathawalla, Ummul-Kiram},
+  journal={Cultural methods in psychology: Describing and transforming cultures},
+  pages={427--454},
+  year={2022},
+  publisher={Oxford University Press New York}
+}
+
+@article{lahaut2002non,
+  title={Non-response bias in a sample survey on alcohol consumption},
+  author={Lahaut, Vivienne MHCJ and Jansen, Harrie AM and Van de Mheen, Dike and Garretsen, Henk FL},
+  journal={Alcohol and Alcoholism},
+  volume={37},
+  number={3},
+  pages={256--260},
+  year={2002},
+  publisher={Oxford University Press}
 }
