--- a/05-sampling.Rmd
+++ b/05-sampling.Rmd
@@ -6,7 +6,9 @@ Consider the following three research questions:
 2. Over the last five years, what is the average time to complete a degree for undergrads in the University of California system?
 3. Does a new drug reduce the severity of symptoms in patients with panic disorder?
 
-Each research question refers to a target [population]. In the first question, the target population is all Americans over the age of 18. Oftentimes, it is not feasible to collect data for every case in a population. Collecting data for an entire population is called a [census]. A census is difficult because it is too expensive to collect data for the entire population, but it might also be because it is difficult or impossible to identify the entire population of interest! Instead, a sample is taken. A [sample] is the data you have. Ideally, a sample is a small fraction of the population. For instance, 200 Americans adults in the population might be selected, and this sample data may be used to provide an estimate of the population average and to answer the research question.
+Each research question refers to a target [population]. In the first question, the target population is all Americans over the age of 18. In the second question, it is all undergraduate students in the University of California system. In the third question, it is all patients diagnosed with a panic disorder.
+
+Sometimes people collect data from an entire population, which is called a [census]. However, oftentimes it is not feasible to conduct a census. This might be because it is too expensive to collect data from every member of a population, or because it is difficult or even impossible to identify the entire population of interest! Most psychology research involves collecting data from a [sample]. Ideally, a sample is a small fraction of the population. For example, to address the first research question above, a researcher might sample 200 Americans adults to estimate the average number of close friends that all American adults have.
 
 ```{r sampling, echo = FALSE, out.width='60%', fig.align = 'center', fig.cap='A sample of 10 selected from a population of 100.', fig.alt = 'A circle on the left with 100 human figures. A circle on the right with 10 human figures.'}
 knitr::include_graphics("images/sampling/sampling.png")
@@ -17,16 +19,20 @@ knitr::include_graphics("images/sampling/sampling.png")
 :::learningobjectives
 ##### LEARNING OBJECTIVES {-}
 1. Explain the difference between probability and nonprobability sampling.
-2. Describe the major types of probability sampling.
+2. Describe the major types of probability sampling and the most common type of nonprobability sampling.
+3. Explain why it is important to construct representative samples, and list some ways that researchers construct them.
 :::
 
-Essentially all psychological research involves sampling—selecting a sample to study from the population of interest. Sampling falls into two broad categories. [Probability sampling] occurs when the researcher can specify the probability that each member of the population will be selected for the sample. [Nonprobability sampling] occurs when the researcher cannot specify these probabilities. Most psychological research involves nonprobability sampling. Convenience sampling—studying individuals who happen to be nearby and willing to participate—is a very common form of nonprobability sampling used in psychological research.
+### Probability and Nonprobability Sampling {-}
+Essentially all psychological research involves sampling, which is the process of selecting a sample to study from a population of interest. Sampling methods fall into two broad categories: probability sampling and nonprobability sampling. [Probability sampling] occurs when 1) every member of a target population is identified, 2) every member has a certain non-zero probability of being selected, and 3) selection is random. [Nonprobability sampling] occurs when at least one of the criteria for probability sampling is not met. 
 
-Survey researchers, however, are much more likely to use some form of probability sampling. This is because the goal of most survey research is to make accurate estimates about what is true in a particular population, and these estimates are most accurate when based on a probability sample. For example, it is important for survey researchers to base their estimates of election outcomes—which are often decided by only a few percentage points—on probability samples of likely registered voters.
+Researchers collect data from samples in order to make inferences about their target population. If members of a sample are very different from the other members of the population, researchers may not be able to make appropriate inferences from the sample. Therefore, it is often important to use representative samples: samples that resemble the population in their representation of one or several sociodemographic characteristics like gender, income, race and ethnicity, age, or political orientation. Representative samples can be constructed by probability sampling, but they can also be constructed through nonprobability methods. These methods are critical for much social science research, but historically they have been used less frequently in psychology research, which may limit the conclusions that experimental psychologists can make.   
 
-Compared with nonprobability sampling, probability sampling requires a very clear specification of the population, which of course depends on the research questions to be answered. The population might be all registered voters in the state of Arkansas, all American consumers who have purchased a car in the past year, women in the United States over 40 years old who have received a mammogram in the past decade, or all the alumni of a particular university. Once the population has been specified, probability sampling requires a [sampling frame]. This is essentially a list of all the members of the population from which to select the respondents. Sampling frames can come from a variety of sources, including telephone directories, lists of registered voters, and hospital or insurance records. In some cases, a map can serve as a sampling frame, allowing for the selection of cities, streets, or households.
+#### Probability Sampling Methods {-}
 
-There are a variety of different probability sampling methods. [Simple random sampling] is done in such a way that each individual in the population has an equal probability of being selected for the sample (Figure \@ref(fig:simple)). This could involve putting the names of all individuals in the sampling frame into a hat, mixing them up, and then drawing out the number needed for the sample. Given that most sampling frames take the form of computer files, random sampling is more likely to involve computerized sorting or selection of respondents. A common approach in telephone surveys is random-digit dialing, in which a computer randomly generates phone numbers from among the possible phone numbers within a given geographic area.
+Probability sampling requires a very clear specification of the population, which of course depends on the research questions being addressed. A target population might be all registered voters in the state of Arkansas, all American consumers who have purchased a car in the past year, women in the United States over 40 years old who have received a mammogram in the past decade, all the alumni of a particular university, or all humans on Earth. Once a researcher has specified their target population, probability sampling requires a [sampling frame]. This is essentially a list of all the members of the target population. Sampling frames can come from a variety of sources, including telephone directories, lists of registered voters, or hospital or insurance records. In some cases, a map can serve as a sampling frame, allowing for the selection of cities, streets, or households. However, sometimes creating a sampling frame is difficult or even impossible, which can be one reason that researchers use a nonprobability sampling method.
+
+There are a variety of different probability sampling methods. [Simple random sampling] involves each individual in the population having an equal probability of being selected for the sample (Figure \@ref(fig:simple)). This could involve putting the names of all individuals in the sampling frame into a hat, mixing them up, and then drawing out the number needed for the sample. Given that most sampling frames nowadays take the form of computer files, random sampling is more likely to involve computerized sorting or selection of respondents. A common approach in telephone surveys is random-digit dialing, in which a computer randomly generates phone numbers from among the possible phone numbers within a given geographic area.
 
 ```{r simple, echo = FALSE, fig.cap="Example of simple random sampling. Simple random sampling was used to randomly select the 18 cases (denoted with filled-in dots).", fig.width = 10, out.width = "95%", fig.alt = "Box shows a population of dots (i.e., individuals) where a handful of the dots have been sampled randomly."}
 
@@ -53,7 +59,7 @@ build_srs(n = 18, N = 108)            # build figure
 par(par_og)                           # restore original par
 ```
 
-A common alternative to simple random sampling is [stratified random sampling], in which the population is divided into different subgroups or “strata” (usually based on demographic characteristics) and then a random sample is taken from each “stratum" (Figure \@ref(fig:stratified)). Stratified random sampling can be used to select a sample in which the proportion of respondents in each of various subgroups matches the proportion in the population. For example, because about 12.5% of the US population is Black, stratified random sampling can be used to ensure that a survey of 1,000 American adults includes about 125 Black respondents. Stratified random sampling can also be used to sample extra respondents from particularly small subgroups—allowing valid conclusions to be drawn about those subgroups. For example, because Asian Americans make up a fairly small percentage of the US population (about 4.5%), a simple random sample of 1,000 American adults might include too few Asian Americans to draw any conclusions about them as distinct from any other subgroup. If this is important to the research question, however, then stratified random sampling could be used to ensure that enough Asian American respondents are included in the sample to draw valid conclusions about Asian Americans as a whole.
+A common alternative to simple random sampling is [stratified random sampling], in which the population is divided into different subgroups or “strata” (usually based on demographic characteristics) and then a random sample is taken from each “stratum" (the plural of "strata"; Figure \@ref(fig:stratified)). Stratified random sampling can be used to select a sample in which the proportion of respondents in each of various subgroups matches the proportion in the population. For example, according to the 2022 Census, 13.6% of the US population identifies as Black alone, so stratified random sampling can be used to ensure that a survey of 1,000 American adults includes about 136 Black respondents. Stratified random sampling can also be used to sample extra respondents from smaller subgroups—allowing valid conclusions to be drawn about those subgroups. For example, because Asian Americans make up a fairly small percentage of the US population (about 6.3%), a simple random sample of 1,000 American adults might include too few Asian Americans to draw any conclusions about them as distinct from any other subgroup. If this is important to the research question, however, then stratified random sampling could be used to ensure that enough Asian American respondents are included in the sample to draw more valid conclusions about Asian Americans as a whole.
 
 ```{r stratified, echo = FALSE, fig.cap="Example of stratified random sampling. Cases were first grouped into strata, or subgroups, then simple random sampling was employed to randomly select 20% of cases within each stratum. The resulting sample reflects the proportion of cases in each subgroup.", fig.width = 10, out.width = "95%", fig.alt = "The box shows the same population of dots but grouped in such a way that there are six strata.  From each stratum 20% of the dots (i.e., individuals) are randomly selected."}
 
@@ -192,23 +198,25 @@ build_cluster()                       # build figure
 par(par_og)                           # restore original par
 ```
 
-### Sample Size {-}
+#### Nonprobability Sampling Methods {-}
 
-How large does a sample need to be? In general, this depends on two factors. One is the level of confidence in the result that the researcher wants. The larger the sample, the less any statistic will be affected by random error that might cause researchers to misestimate the corresponding value in the population. The other factor is the budget of the study. Larger samples provide greater confidence, but they take more time, effort, and money to obtain. In the August 2022 issue of *Psychological Science*, the total sample size for individual studies included 28 participants in a multi-trial lab study [@ohata2022] and 953 in an online study [@Schaumberg2022].
+Gathering probability samples from the large populations that psychology researchers want to make conclusions about is often far too difficult and expensive. Consider the target population of all adult humans or even all adult English-speaking humans who are located in the United States. It would be very difficult to identify every member in a population like this and ensure every member has a non-zero probability of being selected. How would you find their names? How would you contact them? What if they did not have an email or a phone number? How could they participate in your experiment if they did not have access to the internet or a form of transportation to come into your lab? What if they did not want to participate at all? 
+
+The vast majority of psychology research has been conducted with convenience samples: nonprobability samples that feature individuals who can be recruited easily, such as college undergraduates. Other types of nonprobability sampling methods are called snowball, quota, and purposive. Snowball sampling involves asking members of a sample to help recruit more participants by asking people they know to also participate. Quota (identifying pre-existing subgroups and recruiting a specific number of participants from each group, using a non-random selection method) and purposive (selecting participants on the basis of some characteristic, using a non-random selection method) are two types of nonprobability methods that can be used to construct more representative samples. Researchers often use more sophisticated sampling methods to ensure more representative samples when they believe specific characteristics of their participants are relevant to their research question, which is often the case in survey research. 
 
 :::fyi
-##### Sample Size and Population Size {-}
-Why are a samples of 100 to 1,000 considered to be adequate for most survey research—even when the population is much larger than that? Consider, for example, that a sample of only 1,000 registered voters is generally considered a good sample of the roughly 120 million registered voters in the US population—even though it includes only about 0.0008% of the population! The answer is a bit surprising.
+##### The Rise of Online Data Collection: A Solution to Non-Representative Samples? {-}
+Psychology experiments have typically been conducted by recruiting participants from what has been referred to as the “subject pool” or participant pool. This term denotes a group of people who can be recruited for experiments, typically students from introductory psychology courses [@sieber1989census], who are required to complete a certain number of experiments as part of their coursework. The ready availability of this convenient pool has led to a massive over-representation of undergraduates in published psychology research [@sears1986college; @henrich2010weirdest]. 
 
-One part of the answer is that a statistic based on a larger sample will tend to be closer to the population value and that this can be characterized mathematically. Imagine, for example, that in a sample of registered voters, exactly 50% say they intend to vote for the incumbent. If there are 100 voters in this sample, then there is a 95% chance that the true percentage in the population is between 40 and 60. But if there are 1,000 voters in the sample, then there is a 95% chance that the true percentage in the population is between 47 and 53. Although this “95% confidence interval” continues to shrink as the sample size increases, it does so at a slower rate. For example, if there are 2,000 voters in the sample, then this only reduces the 95% confidence interval to 48 to 52. In many situations, the small increase in confidence beyond a sample size of 1,000 is not considered to be worth the additional time, effort, and money.
+Yet over the last couple of decades, there has been a revolution in data collection. Instead of focusing on university undergraduates, increasingly, researchers recruit individuals from crowdsourcing websites like Amazon Mechanical Turk (MTurk) and Prolific Academic. Crowdsourcing services were originally designed to recruit and pay workers for ad-hoc business tasks like retyping receipts, but they have also become marketplaces to connect researchers with people who are willing to complete surveys and tasks for small payments [@litman2017turkprime]. 
 
-Another part of the answer—and perhaps the more surprising part—is that confidence intervals depend only on the size of the sample and not on the size of the population. So a sample of 1,000 would produce a 95% confidence interval of 47 to 53 regardless of whether the population size was a hundred thousand, a million, or a hundred million.
+In addition to increasing the number of people that researchers have access to, some online platforms allow researchers to construct more representative samples using nonprobability sampling methods like quota sampling. For example, Prolific allows researchers to specify their desired proportion of three key demographics (age, sex, and ethnicity). These methods can increase the representativeness of samples, but there are other challenges to collecting data online. For example, many online studies involve almost no direct contact with participants; some online participants multi-task in other windows or on other devices; and compensation is often quite low so samples are likely to not be representative with respect to socioeconomic status (one study of crowd work found that the average wage earned was just $2.00/hour, and less than 5% of workers were paid at least the federal minimum wage [@hara2018data]). 
 :::
 
 :::takeaways
 ##### KEY TAKEAWAYS {-}
-- Survey research usually involves probability sampling, in which each member of the population has a known probability of being selected for the sample.
-- Types of probability sampling include simple random sampling, stratified random sampling, and cluster sampling.
+- Survey research usually involves probability sampling, in which each member of the population has a known non-zero probability of being selected for the sample.
+- Types of probability sampling include simple random sampling, stratified random sampling, and cluster sampling. The most common sampling method used in psychology research is convenience sampling, which is a nonprobability sampling method.
 :::
 
 :::exercises
@@ -226,25 +234,20 @@ Another part of the answer—and perhaps the more surprising part—is that conf
 ##### LEARNING OBJECTIVES {-}
 1. Define sampling bias in general and nonresponse bias in particular.
 2. List some techniques that can be used to increase the response rate and reduce nonresponse bias.
+3. Explain the WEIRD problem in psychology and how it may limit generalizability of psychological findings.  
 :::
 
-### Sampling Bias and Nonresponse Bias {-}
-
-Probability sampling was developed in large part to address the issue of sampling bias. [Sampling bias] occurs when a sample is selected in such a way that it is not representative of the entire population and therefore produces inaccurate results. This was the reason that the *Literary Digest* straw poll was so far off in its prediction of the 1936 presidential election. The mailing lists used came largely from telephone directories and lists of registered automobile owners, which overrepresented wealthier people, who were more likely to vote for Landon. Gallup was successful because he knew about this bias and found ways to sample less wealthy people as well.
-
-There is one form of sampling bias that even careful random sampling is subject to. It is almost never the case that everyone selected for the sample actually responds to the survey. Some may have died or moved away, and others may decline to participate because they are too busy, are not interested in the survey topic, or do not participate in surveys on principle. If these survey nonresponders differ from survey responders in systematic ways, then this can produce [nonresponse bias]. For example, in a mail survey on alcohol consumption, researcher Vivienne Lahaut and colleagues found that only about half the sample responded after the initial contact and two follow-up reminders [@lahaut2002non]. The danger here is that the half who responded might have different patterns of alcohol consumption than the half who did not, which could lead to inaccurate conclusions on the part of the researchers. So to test for nonresponse bias, the researchers later made unannounced visits to the homes of a subset of the nonresponders—coming back up to five times if they did not find them at home. They found that the original nonresponders included an especially high proportion of abstainers (nondrinkers), which meant that their estimates of alcohol consumption based only on the original responders were too high.
-
-Although there are methods for statistically correcting for nonresponse bias, they are based on assumptions about the nonresponders—for example, that they are more similar to late responders than to early responders—which may not be correct. For this reason, the best approach to minimizing nonresponse bias is to minimize the number of nonresponders—that is, to maximize the response rate. There is a large research literature on the factors that affect survey response rates [@groves2011survey]. In general, in-person interviews have the highest response rates, followed by telephone surveys, and then mail and Internet surveys. Among the other factors that increase response rates are sending potential respondents a short prenotification message informing them that they will be asked to participate in a survey in the near future and sending simple follow-up reminders to nonresponders after a few weeks. The perceived length and complexity of the survey also makes a difference, which is why it is important to keep survey questionnaires as short, simple, and on topic as possible. Finally, offering an incentive—especially cash—is a reliable way to increase response rates.
+The previous section highlighted the main goal of sampling is to construct samples that allow researchers to make accurate conclusions about a target population, or to generalize their findings. [Sampling bias] occurs when a sample is selected in such a way that it is not representative of the entire population and therefore produces inaccurate results. In 1936, The Literary Digest straw poll incorrectly predicted Alf Landon would win over Franklin D. Roosevelt because of sampling bias. They used mailing lists that came largely from telephone directories and lists of registered automobile owners, which overrepresented wealthier people, who were more likely to vote for Landon. George Gallup, an advertising executive, successfully predicted Roosevelt would win because he knew about this bias and found ways to sample people with less wealth as well.
 
 ### Anecdotal Evidence {-}
 
 Consider the following possible responses to the three research questions at the start of this chapter:
 
-1. A popular American YouTuber posted a video revealing that despite his many followers, he doesn't have anyone he could call a real friend, so the average number of close friends for American adults must be very low.
-2. I met two students who took more than 7 years to graduate from campuses in the University of California system, so it must take longer to graduate from University of California schools than from many other colleges.
-3. My friend’s sister had a severe panic attack after they gave her a new drug, so the drug must not work.
+1.	A popular American YouTuber posted a video revealing that despite his many followers, he doesn’t have anyone he could call a real friend, so the average number of close friends for American adults must be very low.
+2.	I met two students who took more than 7 years to graduate from campuses in the University of California system, so it must take longer to graduate from University of California schools than from many other colleges.
+3.	My friend’s sister had a severe panic attack after they gave her a new drug, so the drug must not work.
 
-Each conclusion is based on data. However, there are two problems. First, the data only represent one or two cases. Second, and more importantly, it is unclear whether these cases are actually representative of the population. Data collected in this haphazard fashion are called [anecdotal evidence]. Be careful of data collected in a haphazard fashion. Such evidence may be true and verifiable, but it may only represent extraordinary cases and therefore not be a good representation of the population.
+Each conclusion is based on some data. However, there are two problems. First, the data only represent one or two individual cases. Second, and more importantly, it is unclear whether these cases are actually representative of the population. Data collected in this haphazard fashion are called [anecdotal evidence]. Be careful of data collected in a haphazard fashion. Such evidence may be true and verifiable, but it may only represent extraordinary cases and therefore not be a good representation of the population.
 
 ```{r snow, echo = FALSE, out.width='35%', fig.align = 'center', fig.cap='In February 2010, some media pundits cited one large snowstorm as evidence against global warming. As comedian Jon Stewart pointed out, “It is one storm, in one region of one country.” *Photo by Flow Clark on Unsplash.*', fig.alt = 'Person walking through a snowy city street.'}
 knitr::include_graphics("images/sampling/snow.jpeg")
@@ -252,12 +255,36 @@ knitr::include_graphics("images/sampling/snow.jpeg")
 
 Anecdotal evidence typically is composed of unusual cases that we recall based on their striking characteristics. For instance, we are more likely to remember the two people we met who took 7 years to graduate than the six others who graduated in four years. Instead, of looking at the most unusual cases, we should examine a sample of many cases that better represent the population.
 
+### Nonresponse Bias {-}
+
+There is one form of sampling bias that even careful probability sampling is subject to. It is almost never the case that everyone selected for the sample actually responds to the survey. Some may have died or moved away, while others may decline to participate because they are too busy, are not interested in the survey topic, or do not participate in surveys on principle. If these survey nonresponders differ from survey responders in systematic ways, then this can produce something called [nonresponse bias]. For example, in a mail survey on alcohol consumption, researcher Vivienne Lahaut and colleagues found that only about half the sample responded after the initial contact and two follow-up reminders [@lahaut2002non]. The danger here is that the half who responded might have different patterns of alcohol consumption than the half who did not, which could lead to inaccurate conclusions on the part of the researchers. To test for nonresponse bias, the researchers later made unannounced visits to the homes of a subset of the nonresponders—coming back up to five times if they did not find them at home. They found that the original nonresponders included an especially high proportion of abstainers (nondrinkers), which meant that their estimates of alcohol consumption based only on the original responders were too high.
+
+There are methods to statistically correct for nonresponse bias, but they are based on assumptions about the nonresponders that may not be true. For example, one assumption is that nonresponders are more similar to late responders than to early responders, which may not be correct. To avoid reliance on these statistical correction methods, some researchers have suggested that the best approach to minimizing nonresponse bias is to minimize the number of nonresponders—that is, to maximize the response rate. Many different factors affect survey response rates [@groves2011survey]. In general, in-person interviews have the highest response rates, followed by telephone surveys, and then mail and online surveys. Sending people a short message informing them that they will be asked to participate in a survey in the near future and sending simple follow-up reminders to nonresponders can also improve response rates. The perceived length and complexity of the survey also makes a difference, which is why it is important to keep surveys as short, simple, and on topic as possible. Finally, offering an incentive—especially cash—is a reliable way to increase response rates. 
+
+However, not all researchers agree that the best way to minimize nonresponse bias is to maximize response rates. A recent review found scant relationship between survey nonresponse bias and response rates [@hendra2019rethinking]. Increasing response rates can be quite costly and time intensive, and may not solve the nonresponse bias problem as well as people have thought in the past. Instead, it may be useful to devote those resources to other areas of reducing bias and improving generalizability in psychology research. 
+
+### The WEIRD Problem in Psychology {-}
+
+Psychology is defined as the study of the human mind. But from a sampling theory standpoint, not a single estimate in the published literature has been based on a probability sample (or a truly representative nonprobability sample) from the entire human population. 
+We know that psychology researchers often collect data from convenience samples that are not representative of the local or national contexts in which they are recruited. But beyond that, it is important to recognize that these local and national contexts are also not representative of the broad range of human experiences. @henrich2010weirdest coined the term WEIRD (Western, Educated, Industrialized, Rich, and Democratic) to sum up some of the ways that typical participants in psychology experiments differ from other humans. The vast over-representation of WEIRD participants in psychology literature has led some researchers to suggest that published results simply reflect “WEIRD psychology”–a small an idiosyncratic part of a much broader universe of human psychology. 
+
+The term WEIRD has been very useful in drawing attention to the lack of representation of the breadth of human experiences in experimental psychology research. However, some researchers have identified that one negative consequence of this idea has been the response that what we need to do as a field is simply to sample more “non-WEIRD” people. Every culture outside the WEIRD moniker is not the same [@syed2022cultural]. A better starting point may be to consider the way that cultural variation should guide our choices about sampling. Additionally, perhaps all researchers should consider the generalizations they make about the human mind from samples (even carefully-constructed probability samples!) that lack the cultural variation that exists in the population of all humans. 
+
+:::fyi
+##### Random Sampling vs. Random Assignment {-}
+Chapter 3 warns against confusing the term *random sampling* with the term *random assignment*. This is easy to do because they sound quite similar, but they refer to different procedures! And when they are neglected, different types of biases occur.
+
+Random sampling, as we have learned in this chapter, is a general term that encompasses probability sampling methods such as simple random sampling. Random sampling refers to *how researchers obtain the participants in their studies*. Probability sampling methods are rarely used in psychological research, which leads to different types of sampling bias, as discussed in the text above. When samples are biased, this limits how generalizable the findings of a study are.  
+
+Random assignment refers to how researchers assign participants in their study to different conditions, *after those participants have already been selected to be in the sample*. Random assignment is very common in psychological research, as it is a required to conduct a true experiment. Without random assignment, a study is vulnerable to assignment bias, which is when groups differ from each other on dimensions not related to the researcher’s manipulation because participants were allowed to select their own group. For example, say a researcher is interested in whether people swim faster in pool water that is 85 degrees or 75 degrees. If they allow their participants to select which kind of water they swim in, it is plausible that people who are already stronger swimmers will pick the cooler pool. If the researcher randomly assigns participants to swim in either the warmer pool or the cooler pool, then any differences in swimming times are not due to individual differences, because those should average out across the two groups. When a study has assignment bias, this limits researchers from concluding that their manipulation caused their result. For more details on experimental design, see Chapter 3! 
+:::
+
 :::takeaways
 ##### KEY TAKEAWAYS {-}
 
 - Sampling bias occurs when a sample is selected in such a way that it is not representative of the population and therefore produces inaccurate results.
-- The most pervasive form of sampling bias is nonresponse bias, which occurs when people who do not respond to the survey differ in important ways from people who do respond.
-- The best way to minimize nonresponse bias is to maximize the response rate by prenotifying respondents, sending them reminders, constructing questionnaires that are short and easy to complete, and offering incentives.
+- One pervasive form of sampling bias is nonresponse bias, which occurs when people who do not respond to the survey differ in important ways from people who do respond.
+- Psychology research suffers from a “WEIRD” problem, in which a disproportionate number of participants are from White, Educated, Industrialized, Rich, and Democratic communities. This limits the conclusions that psychology researchers can make about the human mind in general. 
 :::
 
 :::exercises
@@ -270,7 +297,7 @@ Anecdotal evidence typically is composed of unusual cases that we recall based o
 
 ##### anecdotal evidence {-}
 
-Evidence collected in an casual or unsystematic way.
+Evidence collected in a casual or unsystematic way.
 
 ##### census {-}
 
@@ -283,6 +310,14 @@ Sampling where larger clusters of individuals (e.g., cities, households) are sam
 ##### context effect {-}
 
 An unintended effect of the context in which a response is made. In within-subjects experiments, this can be an effect of being tested in one condition on how participants perceive stimuli or interpret their task and therefore how they respond in later conditions. In survey research, this can be an effect of the surrounding items or the response scale on responses to a particular item.
+
+##### convenience sample {-}
+
+Most commonly used nonprobability sample that features individuals who can be recruited easily, such as college undergraduates.
+
+##### generalizability {-}
+
+The extent to which the results from a sample can be generalized to the target population, to people and situations beyond those actually studied. 
 
 ##### nonprobability sampling {-}
 
@@ -299,6 +334,10 @@ The entire group of individuals that the researcher wants to draw conclusions ab
 ##### probability sampling {-}
 
 An approach to sampling in which the researcher can specify the probability that each member of the population will be selected.
+
+##### representative sample {-}
+
+Samples the resemble the population in their representation of one or several sociodemographic characteristics like gender, income, race and ethnicity, age, or political orientation. 
 
 ##### sample {-}
 
