--- a/book.bib
+++ b/book.bib
@@ -1,3 +1,30 @@
+@article{Gupta2022,
+  title={Dissipation of reactive inhibition is sufficient to explain post-rest improvements in motor sequence learning},
+  author={Gupta, Mohan W and Rickard, Timothy C},
+  journal={npj Science of Learning},
+  volume={7},
+  number={1},
+  pages={25},
+  year={2022},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{Berens2020,
+   abstract = {Abstract: Forgetting involves the loss of information over time; however, we know little about what form this information loss takes. Do memories become less precise over time, or do they instead become less accessible? Here we assessed memory for word–location associations across four days, testing whether forgetting involves losses in precision versus accessibility and whether such losses are modulated by learning a generalizable pattern. We show that forgetting involves losses in memory accessibility with no changes in memory precision. When participants learned a set of related word–location associations that conformed to a general pattern, we saw a strong trade-off; accessibility was enhanced, whereas precision was reduced. However, this trade-off did not appear to be modulated by time or confer a long-term increase in the total amount of information maintained in memory. Our results place theoretical constraints on how models of forgetting and generalization account for time-dependent memory processes. Protocol registration: The stage 1 protocol for this Registered Report was accepted in principle on 4 June 2019. The protocol, as accepted by the journal, can be found at https://doi.org/10.6084/m9.figshare.c.4368464.v1.},
+   author = {Sam C. Berens and Blake A. Richards and Aidan J. Horner},
+   doi = {10.1038/s41562-020-0888-8},
+   issn = {23973374},
+   issue = {8},
+   journal = {Nature Human Behaviour},
+   month = {8},
+   pages = {866-877},
+   pmid = {32514041},
+   publisher = {Nature Research},
+   title = {Dissociating memory accessibility and precision in forgetting},
+   volume = {4},
+   year = {2020},
+}
+
 @article{mehl2007women,
   title={Are women really more talkative than men?},
   author={Mehl, Matthias R and Vazire, Simine and Ram{\'\i}rez-Esparza, Nair{\'a}n and Slatcher, Richard B and Pennebaker, James W},
@@ -1359,4 +1386,87 @@ pages = {1257-1277},
 year = {2022},
 doi = {10.1177/09567976221075303},
     note ={PMID: 35797281}
+}
+
+@inproceedings{hara2018data,
+  title={A data-driven analysis of workers' earnings on Amazon Mechanical Turk},
+  author={Hara, Kotaro and Adams, Abigail and Milland, Kristy and Savage, Saiph and Callison-Burch, Chris and Bigham, Jeffrey P},
+  booktitle={Proceedings of the 2018 CHI conference on human factors in computing systems},
+  pages={1--14},
+  year={2018}
+}
+
+@article{hendra2019rethinking,
+  title={Rethinking response rates: new evidence of little relationship between survey response rates and nonresponse bias},
+  author={Hendra, Richard and Hill, Aaron},
+  journal={Evaluation review},
+  volume={43},
+  number={5},
+  pages={307--330},
+  year={2019},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
+@article{henrich2010weirdest,
+  title={The weirdest people in the world?},
+  author={Henrich, Joseph and Heine, Steven J and Norenzayan, Ara},
+  journal={Behavioral and brain sciences},
+  volume={33},
+  number={2-3},
+  pages={61--83},
+  year={2010},
+  publisher={Cambridge University Press}
+}
+
+@article{litman2017turkprime,
+  title={TurkPrime. com: A versatile crowdsourcing data acquisition platform for the behavioral sciences},
+  author={Litman, Leib and Robinson, Jonathan and Abberbock, Tzvi},
+  journal={Behavior research methods},
+  volume={49},
+  number={2},
+  pages={433--442},
+  year={2017},
+  publisher={Springer}
+}
+
+@article{sears1986college,
+  title={College sophomores in the laboratory: Influences of a narrow data base on social psychology's view of human nature.},
+  author={Sears, David O},
+  journal={Journal of personality and social psychology},
+  volume={51},
+  number={3},
+  pages={515},
+  year={1986},
+  publisher={American Psychological Association}
+}
+
+@article{sieber1989census,
+  title={A census of subject pool characteristics and policies.},
+  author={Sieber, Joan E and Saks, Michael J},
+  journal={American Psychologist},
+  volume={44},
+  number={7},
+  pages={1053},
+  year={1989},
+  publisher={American Psychological Association}
+}
+
+@article{syed2022cultural,
+  title={Cultural psychology, diversity, and representation in open science},
+  author={Syed, Moin and Kathawalla, Ummul-Kiram},
+  journal={Cultural methods in psychology: Describing and transforming cultures},
+  pages={427--454},
+  year={2022},
+  publisher={Oxford University Press New York}
+}
+
+@article{lahaut2002non,
+  title={Non-response bias in a sample survey on alcohol consumption},
+  author={Lahaut, Vivienne MHCJ and Jansen, Harrie AM and Van de Mheen, Dike and Garretsen, Henk FL},
+  journal={Alcohol and Alcoholism},
+  volume={37},
+  number={3},
+  pages={256--260},
+  year={2002},
+  publisher={Oxford University Press}
 }
