Book.bib Added new reference

--- a/book.bib
+++ b/book.bib
@@ -1360,3 +1360,14 @@ year = {2022},
 doi = {10.1177/09567976221075303},
     note ={PMID: 35797281}
 }
+
+@article{guy2021association,
+  title={Association of state-issued mask mandates and allowing on-premises restaurant dining with county-level COVID-19 case and death growth rates—United States, March 1--December 31, 2020},
+  author={Guy Jr, Gery P and Lee, Florence C and Sunshine, Gregory and McCord, Russell and Howard-Williams, Mara and Kompaniyets, Lyudmyla and Dunphy, Christopher and Gakh, Maxim and Weber, Regen and Sauber-Schatz, Erin and others},
+  journal={Morbidity and Mortality Weekly Report},
+  volume={70},
+  number={10},
+  pages={350},
+  year={2021},
+  publisher={Centers for Disease Control and Prevention}
+}
